--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1" />
+            <meta name="name" content="Soumyaraj dutta's portal">
             <title>Portfolio website</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="perconnect" href="https://fonts.google.gstatic.com">
