--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <DOCTYPE html>
 <html>
         <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1" />
-            /*<meta name="name" content="Soumyaraj dutta's portal">*/
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <meta name="name" content="Soumyaraj dutta's portal">
             <title>Portfolio website</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="perconnect" href="https://fonts.google.gstatic.com">
