--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
         <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
+            <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
             <meta name="name" content="Soumyaraj dutta's portal">
             <title>Portfolio website</title>
             <link rel="stylesheet" href="css/style.css">
